Updated 25 with the 2017 playlist

--- a/content/25.md
+++ b/content/25.md
@@ -218,6 +218,7 @@ permalink: /25
   </div>
   <div class="column-third col-third-2_listen">
   	<h3 class="listen">2017</h3>
+  	<h5 class="listen"><a href="https://open.spotify.com/playlist/18VHKcDWkoilEHuB9tYZ7z?si=66ypWJwKT9uZ4o7j2mjjXw" class="playlist">Spin the Playlist</a></h5>
   </div>	
   <!-- List -->
   <div class="column-third col-third-3_listen">
