--- a/content/25.md
+++ b/content/25.md
@@ -2,8 +2,7 @@
 layout: resources
 permalink: /25
 ---
-
-<!-- 2020 -->
+<!-- 2021 -->
 <div class="main-wrapper">
 <div class="main-inner">	
 <div class="row">
@@ -12,6 +11,77 @@ permalink: /25
 		<h1 class="listen">My favorite records that came out in...</h1>
 	</div>
   </div>
+  <!-- 2021 -->
+  <div class="column-third col-third-2_listen">
+  	<h3 class="listen">2021</h3>
+  	<h5 class="listen">Playlist Coming Soon</h5>
+  </div>	
+  <!-- List -->
+  <div class="column-third col-third-3_listen">
+	<h2 class="listen">01.&nbsp;&nbsp;<a href="" class="record"><em>Pressure Machine</em></a></h2>
+	<h4 class="listen">The Killers</h4><br/>
+	<h2 class="listen">02.&nbsp;&nbsp;<a href="" class="record"><em>I Don't Live Here Anymore</em></a></h2>
+	<h4 class="listen">The War on Drugs</h4><br/>
+	<h2 class="listen">03.&nbsp;&nbsp;<a href="" class="record"><em>Good Woman</em></a></h2>
+	<h4 class="listen">The Staves</h4><br/>
+	<h2 class="listen">04.&nbsp;&nbsp;<a href="" class="record"><em>A Billion Little Lights</em></a></h2>
+	<h4 class="listen">Wild Pink</h4><br/>
+	<h2 class="listen">05.&nbsp;&nbsp;<a href="" class="record"><em>Collections From The Whiteout</em></a></h2>
+	<h4 class="listen">Ben Howard</h4><br/>
+	<h2 class="listen">06.&nbsp;&nbsp;<a href="" class="record"><em>Changephobia</em></a></h2>
+	<h4 class="listen">Rostam</h4><br/>
+	<h2 class="listen">07.&nbsp;&nbsp;<a href="" class="record"><em>How Long Do You Think It's Gonna Last?</em></a></h2>
+	<h4 class="listen">Big Red Machine</h4><br/>
+	<h2 class="listen">08.&nbsp;&nbsp;<a href="" class="record"><em>Head of Roses</em></a></h2>
+	<h4 class="listen">Flock of Dimes</h4><br/>
+	<h2 class="listen">09.&nbsp;&nbsp;<a href="" class="record"><em>Screen Violence</em></a></h2>
+	<h4 class="listen">CHVRCHES</h4><br/>
+	<h2 class="listen">10.&nbsp;&nbsp;<a href="" class="record"><em>Little Oblivions</em></a></h2>
+	<h4 class="listen">Julien Baker</h4><br/>
+	<h2 class="listen">11.&nbsp;&nbsp;<a href="" class="record"><em>Gold-Diggers Sound</em></a></h2>
+	<h4 class="listen">Leon Bridges</h4><br/>
+	<h2 class="listen">12.&nbsp;&nbsp;<a href="" class="record"><em>Hope for Sale</em></a></h2>
+	<h4 class="listen">Chiiild</h4><br/>
+	<h2 class="listen">13.&nbsp;&nbsp;<a href="" class="record"><em>A Pillar of Salt</em></a></h2>
+	<h4 class="listen">Noah Gunderson</h4><br/>
+	<h2 class="listen">14.&nbsp;&nbsp;<a href="" class="record"><em>Sob Rock</em></a></h2>
+	<h4 class="listen">John Mayer</h4><br/>
+	<h2 class="listen">15.&nbsp;&nbsp;<a href="" class="record"><em>Donda</em></a></h2>
+	<h4 class="listen">Kanye West </h4><br/>
+	<h2 class="listen">16.&nbsp;&nbsp;<a href="" class="record"><em>Promises</em></a></h2>
+	<h4 class="listen">Floating Points, Pharoah Sanders</h4><br/>
+	<h2 class="listen">17.&nbsp;&nbsp;<a href="" class="record"><em>Watchhouse</em></a></h2>
+	<h4 class="listen">Watchhouse</h4><br/>
+	<h2 class="listen">18.&nbsp;&nbsp;<a href="" class="record"><em>Obsidian</em></a></h2>
+	<h4 class="listen">Jónsi</h4><br/>
+	<h2 class="listen">19.&nbsp;&nbsp;<a href="" class="record"><em>Live Forever</em></a></h2>
+	<h4 class="listen">Bartees Strange</h4><br/>
+	<h2 class="listen">20.&nbsp;&nbsp;<a href="" class="record"><em>30</em></a></h2>
+	<h4 class="listen">Adele</h4><br/>
+	<h2 class="listen">21.&nbsp;&nbsp;<a href="" class="record"><em>In Heaven</em></a></h2>
+	<h4 class="listen">Strand of Oaks</h4><br/>
+	<h2 class="listen">22.&nbsp;&nbsp;<a href="" class="record"><em>In These Silent Days</em></a></h2>
+	<h4 class="listen">Brandi Carlile</h4><br/>
+	<h2 class="listen">23.&nbsp;&nbsp;<a href="" class="record"><em>Take the Sadness Our of Saturday Night</em></a></h2>
+	<h4 class="listen">Bleachers</h4><br/>
+	<h2 class="listen">24.&nbsp;&nbsp;<a href="" class="record"><em>CALL ME IF YOU GET LOST</em></a></h2>
+	<h4 class="listen">Tyler, the Creator</h4><br/>
+	<h2 class="listen">25.&nbsp;&nbsp;<a href="" class="record"><em>Home Video</em></a></h2>
+	<h4 class="listen">Lucy Dacus</h4><br/>
+  </div>
+</div>
+</div>
+</div>
+
+
+<!-- 2020 -->
+<div class="main-wrapper">
+<div class="main-inner">	
+<div class="row">
+  <div class="column-third col-third-1_listen">
+  	&nbsp;
+  </div>
+  <!-- 2020 -->
   <div class="column-third col-third-2_listen">
   	<h3 class="listen">2020</h3>
   	<h5 class="listen"><a href="https://open.spotify.com/playlist/7JX8juHaJHEeMxg9fuQT0J?si=_JRhTGIHSN--Do-afFOJgg" class="playlist">Spin the Playlist</a></h5>
