--- a/content/25.md
+++ b/content/25.md
@@ -18,55 +18,55 @@ permalink: /25
   </div>	
   <!-- List -->
   <div class="column-third col-third-3_listen">
-	<h2 class="listen">01.&nbsp;&nbsp;<a href="" class="record"><em>Pressure Machine</em></a></h2>
+	<h2 class="listen">01.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1qMFjBarjO2xD15BwXZguD?si=y6-4BU5WTiuwN2kapqy_7Q" class="record"><em>Pressure Machine</em></a></h2>
 	<h4 class="listen">The Killers</h4><br/>
-	<h2 class="listen">02.&nbsp;&nbsp;<a href="" class="record"><em>I Don't Live Here Anymore</em></a></h2>
+	<h2 class="listen">02.&nbsp;&nbsp;<a href="https://open.spotify.com/album/69jQsPvJzMvcb2fGqI2qaB?si=j68MzS30SFGkRj34AyyjmA" class="record"><em>I Don't Live Here Anymore</em></a></h2>
 	<h4 class="listen">The War on Drugs</h4><br/>
-	<h2 class="listen">03.&nbsp;&nbsp;<a href="" class="record"><em>Good Woman</em></a></h2>
+	<h2 class="listen">03.&nbsp;&nbsp;<a href="https://open.spotify.com/album/66A7X1EqFQEEvuE5Nezqrl?si=N5O45Ry1RBW_PhSvUQWcMQ" class="record"><em>Good Woman</em></a></h2>
 	<h4 class="listen">The Staves</h4><br/>
-	<h2 class="listen">04.&nbsp;&nbsp;<a href="" class="record"><em>A Billion Little Lights</em></a></h2>
+	<h2 class="listen">04.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5Hj9DO1au6m5BcdosyjODG?si=Ekw0mfXCSDWPjv1nBq3LQA" class="record"><em>A Billion Little Lights</em></a></h2>
 	<h4 class="listen">Wild Pink</h4><br/>
-	<h2 class="listen">05.&nbsp;&nbsp;<a href="" class="record"><em>Collections From The Whiteout</em></a></h2>
+	<h2 class="listen">05.&nbsp;&nbsp;<a href="https://open.spotify.com/album/09P40BHcaue9iF4QasXMTK?si=-8-2JvpPRDiTV4tG6Caklw" class="record"><em>Collections From The Whiteout</em></a></h2>
 	<h4 class="listen">Ben Howard</h4><br/>
-	<h2 class="listen">06.&nbsp;&nbsp;<a href="" class="record"><em>Changephobia</em></a></h2>
+	<h2 class="listen">06.&nbsp;&nbsp;<a href="https://open.spotify.com/album/7v5Vuz4HyHldAgTG9NpcFY?si=X0V0TNDCSEWRUn42jTJgKQ" class="record"><em>Changephobia</em></a></h2>
 	<h4 class="listen">Rostam</h4><br/>
-	<h2 class="listen">07.&nbsp;&nbsp;<a href="" class="record"><em>How Long Do You Think It's Gonna Last?</em></a></h2>
+	<h2 class="listen">07.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3YbMxdapL6mvSQjosFkc0T?si=tquaJkzkQh-Iq1_H490OsQ" class="record"><em>How Long Do You Think It's Gonna Last?</em></a></h2>
 	<h4 class="listen">Big Red Machine</h4><br/>
-	<h2 class="listen">08.&nbsp;&nbsp;<a href="" class="record"><em>Head of Roses</em></a></h2>
+	<h2 class="listen">08.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3GQfoIqcz1eNgQXsPkzVk0?si=nEt51DhsSIutgIyNsFR1NQ" class="record"><em>Head of Roses</em></a></h2>
 	<h4 class="listen">Flock of Dimes</h4><br/>
-	<h2 class="listen">09.&nbsp;&nbsp;<a href="" class="record"><em>Screen Violence</em></a></h2>
+	<h2 class="listen">09.&nbsp;&nbsp;<a href="https://open.spotify.com/album/0KuAi49HdkjHiuL7TjKsud?si=snYw_TM3RLeSkd3qwizMAA" class="record"><em>Screen Violence</em></a></h2>
 	<h4 class="listen">CHVRCHES</h4><br/>
-	<h2 class="listen">10.&nbsp;&nbsp;<a href="" class="record"><em>Little Oblivions</em></a></h2>
+	<h2 class="listen">10.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3IQRHa9iVLsGlSuVHiHZ3A?si=O9iPnMFBTMOzY5LPWB8mEw" class="record"><em>Little Oblivions</em></a></h2>
 	<h4 class="listen">Julien Baker</h4><br/>
-	<h2 class="listen">11.&nbsp;&nbsp;<a href="" class="record"><em>Gold-Diggers Sound</em></a></h2>
+	<h2 class="listen">11.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6SV7Sl0rmVeMuqYlMMAqQB?si=W_hRy80YSK-543Vx8BRKFg" class="record"><em>Gold-Diggers Sound</em></a></h2>
 	<h4 class="listen">Leon Bridges</h4><br/>
-	<h2 class="listen">12.&nbsp;&nbsp;<a href="" class="record"><em>Hope for Sale</em></a></h2>
+	<h2 class="listen">12.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2opiJIrYClkW7qD2vM6vSi?si=aribACNsQVacW3hXwDFhFg" class="record"><em>Hope for Sale</em></a></h2>
 	<h4 class="listen">Chiiild</h4><br/>
-	<h2 class="listen">13.&nbsp;&nbsp;<a href="" class="record"><em>A Pillar of Salt</em></a></h2>
+	<h2 class="listen">13.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6hlXrXeAAxPOZ4y5lonxiQ?si=gRfN9OFEQ4KqcVyC2w4kRQ" class="record"><em>A Pillar of Salt</em></a></h2>
 	<h4 class="listen">Noah Gunderson</h4><br/>
-	<h2 class="listen">14.&nbsp;&nbsp;<a href="" class="record"><em>Sob Rock</em></a></h2>
+	<h2 class="listen">14.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2JmfwvRDitJlTUoLCkp61z?si=xC6wqWifSoyfwU2-bc4f8A" class="record"><em>Sob Rock</em></a></h2>
 	<h4 class="listen">John Mayer</h4><br/>
-	<h2 class="listen">15.&nbsp;&nbsp;<a href="" class="record"><em>Donda</em></a></h2>
+	<h2 class="listen">15.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5CnpZV3q5BcESefcB3WJmz?si=4uscAEjYQOu5510KQpErRA" class="record"><em>Donda</em></a></h2>
 	<h4 class="listen">Kanye West </h4><br/>
-	<h2 class="listen">16.&nbsp;&nbsp;<a href="" class="record"><em>Promises</em></a></h2>
+	<h2 class="listen">16.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3ShtO5VCYa3ctlR5uzLWBa?si=c5GkKMT9TYe9Bapxy0jiIQ" class="record"><em>Promises</em></a></h2>
 	<h4 class="listen">Floating Points, Pharoah Sanders</h4><br/>
-	<h2 class="listen">17.&nbsp;&nbsp;<a href="" class="record"><em>Watchhouse</em></a></h2>
+	<h2 class="listen">17.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2ZURBTlzCG2WCMuEwvRBaK?si=EjsYSxneRWKDQcM-mz0gKA" class="record"><em>Watchhouse</em></a></h2>
 	<h4 class="listen">Watchhouse</h4><br/>
-	<h2 class="listen">18.&nbsp;&nbsp;<a href="" class="record"><em>Obsidian</em></a></h2>
+	<h2 class="listen">18.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1z8Ljm0ST8ICL9lkJNZSev?si=_mv3sJR4Q16LiOkgOpoHJg" class="record"><em>Obsidian</em></a></h2>
 	<h4 class="listen">Jónsi</h4><br/>
-	<h2 class="listen">19.&nbsp;&nbsp;<a href="" class="record"><em>Live Forever</em></a></h2>
+	<h2 class="listen">19.&nbsp;&nbsp;<a href="https://open.spotify.com/album/0BTz0mHuiV8hEsU9azWSwo?si=Y9Ua8LlwQFCYHLp9r9MCyg" class="record"><em>Live Forever</em></a></h2>
 	<h4 class="listen">Bartees Strange</h4><br/>
-	<h2 class="listen">20.&nbsp;&nbsp;<a href="" class="record"><em>30</em></a></h2>
+	<h2 class="listen">20.&nbsp;&nbsp;<a href="https://open.spotify.com/album/21jF5jlMtzo94wbxmJ18aa?si=p3neLHUhSb2emLtYZIrYuA" class="record"><em>30</em></a></h2>
 	<h4 class="listen">Adele</h4><br/>
-	<h2 class="listen">21.&nbsp;&nbsp;<a href="" class="record"><em>In Heaven</em></a></h2>
+	<h2 class="listen">21.&nbsp;&nbsp;<a href="https://open.spotify.com/album/76pQf98XjjF5RZIniiev2d?si=BX2iJ9HcTdig9anqmXwODw" class="record"><em>In Heaven</em></a></h2>
 	<h4 class="listen">Strand of Oaks</h4><br/>
-	<h2 class="listen">22.&nbsp;&nbsp;<a href="" class="record"><em>In These Silent Days</em></a></h2>
+	<h2 class="listen">22.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5mIT7iw9w64DMP2vxP9L1f?si=joQ8yRgZQnK2IUeqNGzeiQ" class="record"><em>In These Silent Days</em></a></h2>
 	<h4 class="listen">Brandi Carlile</h4><br/>
-	<h2 class="listen">23.&nbsp;&nbsp;<a href="" class="record"><em>Take the Sadness Our of Saturday Night</em></a></h2>
+	<h2 class="listen">23.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6SPUtbeCQiPGej0t5RBasE?si=1YSqpUNORTaq5f7tv34Orw" class="record"><em>Take the Sadness Our of Saturday Night</em></a></h2>
 	<h4 class="listen">Bleachers</h4><br/>
-	<h2 class="listen">24.&nbsp;&nbsp;<a href="" class="record"><em>CALL ME IF YOU GET LOST</em></a></h2>
+	<h2 class="listen">24.&nbsp;&nbsp;<a href="https://open.spotify.com/album/45ba6QAtNrdv6Ke4MFOKk9?si=YikK8AzvRmuH9CR4BDZT2A" class="record"><em>CALL ME IF YOU GET LOST</em></a></h2>
 	<h4 class="listen">Tyler, the Creator</h4><br/>
-	<h2 class="listen">25.&nbsp;&nbsp;<a href="" class="record"><em>Home Video</em></a></h2>
+	<h2 class="listen">25.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2nwfSapJ3YIq7Ofad4Vuh1?si=1FKziqX6Sjivwc7Wa8qTEA" class="record"><em>Home Video</em></a></h2>
 	<h4 class="listen">Lucy Dacus</h4><br/>
   </div>
 </div>
