--- a/content/25.md
+++ b/content/25.md
@@ -54,8 +54,8 @@ permalink: /25
 	<h4 class="listen">Watchhouse</h4><br/>
 	<h2 class="listen">18.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1z8Ljm0ST8ICL9lkJNZSev?si=_mv3sJR4Q16LiOkgOpoHJg" class="record"><em>Obsidian</em></a></h2>
 	<h4 class="listen">Jónsi</h4><br/>
-	<h2 class="listen">19.&nbsp;&nbsp;<a href="https://open.spotify.com/album/0BTz0mHuiV8hEsU9azWSwo?si=Y9Ua8LlwQFCYHLp9r9MCyg" class="record"><em>Live Forever</em></a></h2>
-	<h4 class="listen">Bartees Strange</h4><br/>
+	<h2 class="listen">19.&nbsp;&nbsp;<a href="https://open.spotify.com/album/61o3mZcWhcH9DbQjCHxCV4?si=3q04Ol3JTMyHuNz_lFSH_A" class="record"><em>January Flower</em></a></h2>
+	<h4 class="listen">Mat Kearney</h4><br/>
 	<h2 class="listen">20.&nbsp;&nbsp;<a href="https://open.spotify.com/album/21jF5jlMtzo94wbxmJ18aa?si=p3neLHUhSb2emLtYZIrYuA" class="record"><em>30</em></a></h2>
 	<h4 class="listen">Adele</h4><br/>
 	<h2 class="listen">21.&nbsp;&nbsp;<a href="https://open.spotify.com/album/76pQf98XjjF5RZIniiev2d?si=BX2iJ9HcTdig9anqmXwODw" class="record"><em>In Heaven</em></a></h2>
