Added playlist to 25

--- a/content/25.md
+++ b/content/25.md
@@ -14,7 +14,7 @@ permalink: /25
   <!-- 2021 -->
   <div class="column-third col-third-2_listen">
   	<h3 class="listen">2021</h3>
-  	<h5 class="listen">Playlist Coming Soon</h5>
+  	<h5 class="listen"><a href="https://open.spotify.com/playlist/0nMSOh5lGXqii6XWfPCF8Q?si=78036ef7cee44961" class="playlist">Spin the Playlist</a></h5>
   </div>	
   <!-- List -->
   <div class="column-third col-third-3_listen">
